feat(open-api): Generated EditRainLog endpoint
