# src/app/services/api/models/edit-rain-log-dto.ts
@@ -1,0 +1,8 @@
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface EditRainLogDto {
+  date?: string;
+  liters?: number;
+  seasonName: string | null;
+}
